# pc-games-ecommerce-analysis

./: .gitignore  README.md  pyproject.toml
pc_games_ecommerce_analysis/: items.py  settings.py
pc_games_ecommerce_analysis/pipelines/: nuuvem.py
pc_games_ecommerce_analysis/spiders/: nuuvem.py
